canvis amb media query

--- a/tema_1/nivell_1/basic.css
+++ b/tema_1/nivell_1/basic.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  max-width:1200px; 
+  max-width: 1200px;
 }
 
 html,
@@ -40,9 +40,9 @@ body {
   margin: 5px;
 }
 .fondo3 {
-    background-color: #9B8939;
-    margin: 5px;
-  }
+  background-color: #9b8939;
+  margin: 5px;
+}
 
 .container2 > div {
   padding: 10px;
@@ -60,40 +60,42 @@ body {
   background-color: #d6e41a;
 }
 
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+  body {
+    background-color: red;
+  }
+  .container2 {
+    flex-wrap: wrap;
+  }
+  .container {
+    flex-wrap: wrap;
+  }
+  .c4{
+    flex-wrap:wrap;
+  }
+}
 
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {
+  body {
+    background-color: yellow;
+  }
 
+  .container2 {
+    flex-wrap: wrap;
+  }
+  .container {
+    flex-wrap: wrap;
+  }
+  .c4{
+    flex-wrap:wrap;
+  }
+}
 
-  /* Media Query for Mobile Devices */ 
-  @media (max-width: 480px) { 
-    body { 
-        background-color: red; 
-    } 
-} 
-  
-/* Media Query for low resolution  Tablets, Ipads */ 
-@media (min-width: 481px) and (max-width: 767px) { 
-    body { 
-        background-color: yellow; 
-    } 
-} 
-  
-/* Media Query for Tablets Ipads portrait mode */ 
-@media (min-width: 768px) and (max-width: 1024px){ 
-    body { 
-        background-color: blue; 
-    } 
-} 
-  
-/* Media Query for Laptops and Desktops */ 
-@media (min-width: 1025px) and (max-width: 1280px){ 
-    body { 
-        background-color: green; 
-    } 
-} 
-  
-/* Media Query for Large screens */ 
-@media (min-width: 1281px) { 
-    body { 
-        background-color: white; 
-    } 
-} 
+/* Media Query for Laptops and Desktops */
+@media (min-width: 767px) and (max-width: 1280px) {
+  body {
+    background-color: green;
+  }
+}
